menambahkan hero element

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -22,6 +22,10 @@
     </header>
 
     <!-- Hero Element (Jumbotron Element) -->
+    <section class="hero">
+      <img src="./images/heros/hero-image_2.jpg" alt="Hero Image" />
+    </section>
+
     <!-- Daftar Restoran -->
 
     <footer>
