--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -68,3 +68,20 @@ nav {
     padding: 1rem;
   }
 }
+
+/* Hero Styles */
+.hero {
+  width: 100%;
+  overflow: hidden;
+}
+
+.hero img {
+  width: 100%;
+  display: block;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero img {
+    min-width: 1000px;
+  }
+}
