menambahkan tombol menu

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,6 +10,7 @@
     <header>
       <nav class="navbar">
         <div class="brand-logo">Restaurant Apps</div>
+        <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
         <ul class="nav-links">
           <li><a href="#home">Home</a></li>
           <li><a href="#favorites">Favorites</a></li>
