menambahkan fungsi toggle pada tombol menu

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,6 +18,15 @@
         </ul>
       </nav>
     </header>
+    <script>
+      const menuToggle = document.querySelector(".menu-toggle");
+      const navLinks = document.querySelector(".nav-links");
+
+      menuToggle.addEventListener("click", () => {
+        navLinks.classList.toggle("active");
+      });
+    </script>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
