--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,11 @@
     <header>
       <nav class="navbar">
         <div class="brand-logo">Restaurant Apps</div>
-        <button class="menu-toggle" aria-label="Toggle Menu">&#9776;</button>
+        <button class="navbar-toggle" aria-label="Toggle navigation">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
         <ul class="nav-links">
           <li><a href="#home">Home</a></li>
           <li><a href="#favorites">Favorites</a></li>
@@ -18,14 +22,8 @@
         </ul>
       </nav>
     </header>
-    <script>
-      const menuToggle = document.querySelector(".menu-toggle");
-      const navLinks = document.querySelector(".nav-links");
 
-      menuToggle.addEventListener("click", () => {
-        navLinks.classList.toggle("active");
-      });
-    </script>
+    <!-- Your other content here -->
 
     <script src="./scripts/index.js"></script>
   </body>
