--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,10 @@
   <body>
     <!-- App Bar -->
     <header class="app-bar">
-      <div class="brand-logo">Restaurant App</div>
+      <div class="brand-logo">
+        <img src="../images/catalog_logo.png" alt="" width="60px" />
+        Restaurant App
+      </div>
       <nav class="navigation-menu">
         <ul>
           <li><a href="#">Home</a></li>
