--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,18 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Apps</title>
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <h1>Restaurant Apps Starter Project</h1>
+    <header>
+      <img src="./images/catalog_logo.png" alt="Restaurant Catalog Logo" />
+      <!-- Tambahkan elemen img untuk logo -->
+      <h1>Restaurant Apps</h1>
+    </header>
     <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
     <p>
-      Jangan lupa untuk menggunakan salah satu gambar yang berada pada ./images/heros
-      sebagai background hero elemen.
+      Jangan lupa untuk menggunakan salah satu gambar yang berada pada
+      ./images/heros sebagai background hero elemen.
     </p>
     <img src="./images/heros/hero-image_1.jpg" width="450" alt="" />
     <img src="./images/heros/hero-image_2.jpg" width="450" alt="" />
     <img src="./images/heros/hero-image_3.jpg" width="450" alt="" />
     <img src="./images/heros/hero-image_4.jpg" width="450" alt="" />
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
