--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,10 +8,21 @@
   </head>
   <body>
     <header>
-      <img src="./images/catalog_logo.png" alt="Restaurant Catalog Logo" />
-      <!-- Tambahkan elemen img untuk logo -->
-      <h1>Restaurant Apps</h1>
+      <div class="header-left">
+        <img src="./images/catalog_logo.png" alt="Restaurant Catalog Logo" />
+        <h1>Restaurant Apps</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="#">Favorite</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/your-profile">About Us</a>
+          </li>
+        </ul>
+      </nav>
     </header>
+
     <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
     <p>
       Jangan lupa untuk menggunakan salah satu gambar yang berada pada
