--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,7 +21,22 @@
           </li>
         </ul>
       </nav>
+      <!--<button class="menu-toggle">&#9776;</button>-->
+      <button class="menu-toggle">&#9776;</button>
     </header>
+
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="#">Favorite</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/your-profile">About Us</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
     <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
     <p>
