menambahkan hero element

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,6 +23,14 @@
       </nav>
     </header>
 
+    <div class="hero">
+      <img
+        src="./images/heros/hero-image_2.jpg"
+        alt="Hero Image"
+        class="hero-image"
+      />
+    </div>
+
     <p>Hallo coders! Anda berhasil menjalankan starter project.</p>
     <p>
       Jangan lupa untuk menggunakan salah satu gambar yang berada pada
