--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -57,3 +57,20 @@ nav a {
 nav a:hover {
   color: #ff6347; /* warna teks saat dihover */
 }
+
+/* Style untuk hero element */
+.hero {
+  width: 100%;
+  overflow: hidden;
+}
+
+.hero-image {
+  width: 100%;
+  object-fit: cover;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-image {
+    min-width: 1000px;
+  }
+}
