menampilkan daftar restoran

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -76,3 +76,40 @@ nav a:hover {
     min-width: 1000px;
   }
 }
+
+/* CSS untuk daftar restoran menggunakan teknik Flexbox */
+
+h2 {
+  margin-top: 15px;
+  text-align: center;
+}
+
+#restaurant-list {
+  margin-top: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.restaurant {
+  flex: 1 1 calc(33.33% - 20px); /* 3 kolom, dengan jarak 20px */
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.restaurant-image {
+  width: 100%;
+  height: auto;
+}
+
+.restaurant-info {
+  margin-top: 10px;
+}
+
+.restaurant-info h2 {
+  margin-bottom: 5px;
+}
+
+.restaurant-info p {
+  margin-bottom: 5px;
+}
