--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -30,6 +30,10 @@
         class="hero-image"
       />
     </div>
+
+    <h2>Daftar Restoran</h2>
+    <div id="restaurant-list"></div>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
