--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -34,6 +34,20 @@
     <h2>Daftar Restoran</h2>
     <div id="restaurant-list"></div>
 
+    <footer>
+      <div class="footer-content">
+        <div class="footer-logo">Restaurant Apps</div>
+        <div class="footer-menu">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </div>
+        <div class="footer-info">
+          &copy; 2024 - Restaurant Apps. All rights reserved.
+        </div>
+      </div>
+    </footer>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
