mengatur responsibilitas untuk setiap device dan menambahkan drawer button

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,6 +12,7 @@
         <img src="./images/catalog_logo.png" alt="Restaurant Catalog Logo" />
         <h1>Restaurant Apps</h1>
       </div>
+      <button class="drawer-button">&#9776;</button>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
