--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -78,7 +78,6 @@ nav a:hover {
 }
 
 /* CSS untuk daftar restoran menggunakan teknik Flexbox */
-
 h2 {
   margin-top: 15px;
   text-align: center;
@@ -154,12 +153,45 @@ footer {
   font-size: 14px;
 }
 
+.drawer-button {
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
-  .footer-content {
-    flex-direction: column;
+  .drawer-button {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    background: none;
+    border: none;
+    cursor: pointer;
   }
 
-  .footer-menu {
-    margin-top: 20px;
+  /* Navigation menu */
+  nav {
+    display: none; /* Hide navigation menu by default */
+    position: absolute;
+    top: 60px; /* Adjust based on header height */
+    left: 0;
+    width: 100%;
+    background-color: lightgray;
+    opacity: 0.9;
+    z-index: 1;
+  }
+
+  nav ul {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  nav li {
+    margin: 10px 0;
+  }
+
+  /* Show navigation menu when drawer button is clicked */
+  nav.show {
+    display: block;
   }
 }
