--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -161,6 +161,7 @@ footer {
   .drawer-button {
     display: block;
     position: absolute;
+    margin-top: 7px;
     top: 10px;
     right: 10px;
     font-size: 24px;
