penyesuaian nama aplikasi

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant Apps</title>
+    <title>Jelajah Rasa</title>
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <header>
       <div class="header-left">
         <img src="./images/catalog_logo.png" alt="Restaurant Catalog Logo" />
-        <h1>Restaurant Apps</h1>
+        <h1>Jelajah Rasa</h1>
       </div>
       <button class="drawer-button">&#9776;</button>
       <nav>
