masih penyesuaian footer

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -44,7 +44,7 @@
           <a href="#">Contact</a>
         </div>
         <div class="footer-info">
-          &copy; 2024 - Restaurant Apps. All rights reserved.
+          &copy; 2024 - Jelajah Rasa. All rights reserved.
         </div>
       </div>
     </footer>
