--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -195,7 +195,6 @@ footer {
 }
 
 .footer-menu a {
-  margin-bottom: 20px;
   color: #fff;
   text-decoration: none;
   transition: color 0.3s ease;
@@ -216,5 +215,8 @@ footer {
 
   .footer-menu {
     margin-top: 20px;
+  }
+  .footer-menu a {
+    margin-bottom: 70px;
   }
 }
