memberikan target blank untuk link about us

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,7 +18,9 @@
           <li><a href="/">Home</a></li>
           <li><a href="#">Favorite</a></li>
           <li>
-            <a href="https://www.linkedin.com/in/ifdal-lisyukri-b567372a4/"
+            <a
+              target="blank"
+              href="https://www.linkedin.com/in/ifdal-lisyukri-b567372a4/"
               >About Us</a
             >
           </li>
