sedikit penyesuaian semantic element

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,9 +36,11 @@
       />
     </div>
 
-    <h2>Daftar Restoran</h2>
-    <hr />
-    <div id="restaurant-list"></div>
+    <main>
+      <h2>Daftar Restoran</h2>
+      <hr />
+      <div id="restaurant-list"></div>
+    </main>
 
     <footer>
       <div class="footer-content">
