--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -165,6 +165,12 @@ hr {
   margin-bottom: 5px;
 }
 
+@media screen and (max-width: 768px) {
+  .restaurant {
+    flex: 1 1 calc(100% - 20px);
+  }
+}
+
 .drawer-button {
   width: 44px;
   height: 44px;
