--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -165,9 +165,15 @@ hr {
   margin-bottom: 5px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 850px) {
   .restaurant {
     flex: 1 1 calc(100% - 20px);
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .restaurant {
+    flex: 1 1 calc(45% - 20px);
   }
 }
 
