--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,3 @@
-/* main.css */
-
 * {
   padding: 0;
   margin: 0;
@@ -12,18 +10,18 @@ body {
 
 img {
   display: block;
-  max-width: 100%; /* Pastikan gambar tidak melebihi ukuran kontainer */
+  max-width: 100%;
 }
 
 /* Style untuk header */
 header {
-  background-color: #fea82f; /* warna latar belakang */
-  padding-left: 10px; /* padding untuk memberikan ruang di sekitar konten */
-  padding-top: 10px; /* padding untuk memberikan ruang di sekitar konten */
-  padding-bottom: 10px; /* padding untuk memberikan ruang di sekitar konten */
-  display: flex; /* membuat elemen header menjadi flex container */
-  justify-content: space-between; /* mengatur ruang di antara elemen header */
-  align-items: center; /* mengatur konten di tengah secara vertikal */
+  background-color: #fea82f;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: fixed;
   width: 100%;
   box-shadow: 0px 6px 7px rgba(0, 0, 0, 0.5);
@@ -32,44 +30,44 @@ header {
 
 /* Style untuk logo dan judul */
 .header-left {
-  display: flex; /* membuat kontainer untuk logo dan judul menjadi flex container */
-  align-items: center; /* mengatur konten di tengah secara vertikal */
+  display: flex;
+  align-items: center;
 }
 
 /* Style untuk logo */
 header img {
-  width: 50px; /* ukuran logo */
-  margin-right: 0px; /* jarak antara logo dan teks */
+  width: 50px;
+  margin-right: 0px;
 }
 
 /* Style untuk judul */
 header h1 {
-  margin: 0; /* menghapus margin default */
-  font-size: 24px; /* ukuran font */
-  color: #fff; /* warna teks */
+  margin: 0;
+  font-size: 24px;
+  color: #fff;
 }
 
 /* Style untuk navigasi menu */
 nav ul {
-  list-style-type: none; /* menghilangkan bullet points pada daftar */
-  margin: 0; /* menghapus margin default */
-  padding-right: 0; /* menghapus padding default */
-  display: flex; /* membuat daftar menjadi flex container */
+  list-style-type: none;
+  margin: 0;
+  padding-right: 0;
+  display: flex;
 }
 
 nav li {
-  margin-left: 15px; /* jarak antara setiap item menu */
+  margin-left: 15px;
 }
 
 nav a {
-  text-decoration: none; /* menghapus garis bawah pada tautan */
-  color: #fff; /* warna teks */
+  text-decoration: none;
+  color: #fff;
   margin-right: 25px;
-  font-weight: bold; /* membuat teks menjadi tebal */
+  font-weight: bold;
 }
 
 nav a:hover {
-  color: #ff6347; /* warna teks saat dihover */
+  color: #ff6347;
 }
 
 /* Style untuk hero element */
@@ -90,7 +88,7 @@ nav a:hover {
   }
 }
 
-/* CSS untuk daftar restoran menggunakan teknik Flexbox */
+/* style untuk daftar restoran */
 h2 {
   margin-top: 15px;
   color: #fff;
@@ -113,7 +111,7 @@ hr {
 
 .restaurant {
   position: relative;
-  flex: 1 1 calc(29.33% - 20px); /* 3 kolom, dengan jarak 20px */
+  flex: 1 1 calc(29.33% - 20px);
   padding: 15px;
   border: 2px solid #ff6701;
   background-color: #f0e3ca;
@@ -211,14 +209,14 @@ hr {
 
   /* Transisi untuk menu navigasi */
   nav {
-    display: none; /* Sembunyikan menu navigasi secara default */
+    display: none;
     position: absolute;
-    top: 60px; /* Sesuaikan berdasarkan tinggi header */
+    top: 60px;
     left: 0;
     width: 100%;
     background-color: #fea82f;
     z-index: 1;
-    animation: slideDown 0.5s ease; /* Panggil animasi saat menu ditampilkan */
+    animation: slideDown 0.5s ease;
     box-shadow: 0px 7px 7px 1px rgba(0, 0, 0, 0.5);
   }
 
@@ -295,27 +293,24 @@ footer {
   }
 }
 
-/* Tambahkan CSS untuk tautan "Skip to Content" */
+/*  "Skip to Content" */
 .skip-to-content {
   position: absolute;
   top: -9999px;
   left: -9999px;
 }
 
-/* Tambahkan CSS untuk tombol dengan ukuran touch target minimal 44x44px */
+/* tombol ukuran touch target minimal 44x44px */
 .drawer-button {
   width: 44px;
   height: 44px;
 }
 
-/* Tambahkan CSS untuk jarak antara elemen-elemen */
-/* Misalnya, antara tombol dan navigasi */
 .drawer-button,
 nav {
   margin-top: 10px;
 }
 
-/* Tambahkan CSS untuk alternative teks pada gambar */
 img {
-  max-width: 100%; /* Pastikan gambar tidak melebihi ukuran kontainer */
+  max-width: 100%;
 }
