menambahkan tabindex untuk main content

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,7 +37,7 @@
       />
     </div>
 
-    <main id="main-content">
+    <main id="main-content tabindex=" tabindex="0">
       <h2>Daftar Restoran</h2>
       <hr />
       <div id="restaurant-list"></div>
