--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <a href="#main-content" class="skip-to-content">Skip to Content</a>
+    <a href="#main-content" class="skip-to-content" id="skip-to-content-link"
+      >Skip to Content</a
+    >
     <header>
       <div class="header-left">
         <img src="./images/catalog_logo.png" alt="Restaurant Catalog Logo" />
@@ -37,7 +39,7 @@
       />
     </div>
 
-    <main id="main-content tabindex=" tabindex="0">
+    <main id="main-content" tabindex="0">
       <h2>Daftar Restoran</h2>
       <hr />
       <div id="restaurant-list"></div>
