--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -80,6 +80,7 @@ nav a:hover {
 .hero {
   width: 100%;
   overflow: hidden;
+  border-bottom: 5px solid #fea82f;
   box-shadow: 0px 1px 10px 5px rgba(0, 0, 0, 0.5);
 }
 
