styling color mode button

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
     <a href="#main-content" class="skip-to-content" id="skip-to-content-link"
       >Skip to Content</a
     >
-    <button id="theme-toggle">Switch Theme</button>
+    <button id="theme-toggle" class="rotate"></button>
     <header>
       <div class="header-left">
         <img src="./images/catalog_logo.png" alt="Restaurant Catalog Logo" />
