--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -27,10 +27,24 @@
 }
 
 #theme-toggle {
+  background-image: url(../public/images/bw_icon.png);
+  background-size: cover;
   z-index: 999;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  text-wrap: wrap;
   position: fixed;
   top: 75px;
-  right: 0px;
+  right: 20px;
+}
+
+.rotate {
+  transition: transform 0.3s ease;
+}
+
+.rotate.rotate-down {
+  transform: rotate(180deg);
 }
 
 body {
