perubahan warna body back

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,9 +8,9 @@
   --header-bg: #ff9800;
   --p-color: #000;
   --h2-main-color: #000;
-  --resto-bg-color: #d9edbf;
+  --resto-bg-color: #fff;
   --resto-h2-color: #2c7865;
-  --body-color: #fff;
+  --body-color: lightyellow;
   --resto-h5-color: #333;
   --resto-h5-bg: #90d26d;
   --resto-glow: 0px 0px 0px 0px rgba(144, 210, 109, 0.5),
