--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jelajah Rasa</title>
     <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="shortcut icon" href="./images/catalog_logo.png" type="image/x-icon">
   </head>
   <body>
     <a href="#main-content" class="skip-to-content" id="skip-to-content-link"
